src/test/ui/parser/issue-2354.stderr
error: this file contains an un-closed delimiter
  --> $DIR/issue-2354.rs:16:66
   |
LL | fn foo() { //~ NOTE un-closed delimiter
   |          - un-closed delimiter
LL |   match Some(x) {
   |                 - this delimiter might not be properly closed...
...
LL | }
   | - ...as it matches this but it has different indentation
...
LL | fn main() {} //~ ERROR this file contains an un-closed delimiter
   |                                                                  ^

error: aborting due to previous error

